<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center">
    <RadioGroup android:id="@+id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@+id/easy" android:text="@string/easydiff" android:layout_height="wrap_content" android:layout_width="wrap_content" android:checked="true"></RadioButton>
        <RadioButton android:id="@+id/medium" android:text="@string/meddiff" android:layout_height="wrap_content" android:layout_width="wrap_content"></RadioButton>
        <RadioButton android:id="@+id/hard" android:text="@string/harddiff" android:layout_height="wrap_content" android:layout_width="wrap_content"></RadioButton>
    </RadioGroup>
    
</LinearLayout>
